# random_cpp_stuff

./: .gitignore  CMakeLists.txt  SFMLMathThing.cpp  cheeesify.py  input.txt  main.cpp  self-delete.c
.github/workflows/: macos.yml
old/: SFMLMathThing.cpp  SFMLMathThing.h  font_data.cpp  font_data.h  main.cpp
